Header and footer are fixed to top/bottom + main content aligned center

--- a/findCat.css
+++ b/findCat.css
@@ -2,8 +2,7 @@
     font-family: 'Comfortaa';
     font-style: normal;
     font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/comfortaa/v30/1Pt_g8LJRfWJmhDAuUsSQamb1W0lwk4S4WjMDrcfIA9c.woff2)
-    format('woff2');
+    src: url(https://fonts.gstatic.com/s/comfortaa/v30/1Pt_g8LJRfWJmhDAuUsSQamb1W0lwk4S4WjMDrcfIA9c.woff2) format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 
@@ -11,13 +10,15 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     width: 100%;
     height: 100%;
     margin: 0;
 }
 
 body {
+    position: relative;
     font: 1.2em 'Comfortaa';
     font-weight: 500;
     line-height: 1.8em;
@@ -28,18 +29,24 @@ body {
 
 .wrapper {
     display: flex;
-    min-height: 100%;
+    min-height: 100vh;
     flex-direction: column;
-    justify-content: space-between;
-    overflow: hidden;
     text-align: center;
 }
 
-.header, footer {
+.header,
+footer {
+    position: fixed;
     font-size: 0.8em;
     color: #ffffff;
     background-color: #f4b46a;
     padding: 0 15px;
+    z-index: 1;
+}
+
+.header {
+    top: 0;
+    width: 100%;
 }
 
 .header-heading {
@@ -78,9 +85,11 @@ button {
     border: none;
     transition: all 0.1s;
 }
+
 button:focus {
     outline: none;
 }
+
 button:focus,
 button:hover {
     background-image: linear-gradient(0.0deg, #ffa65e 0%, #ffbb84 100%);
@@ -92,14 +101,16 @@ button:active {
 
 .game-container {
     display: none;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    padding: 3.5em 0 2em;
 }
 
 .game {
     display: flex;
+    min-width: 90%;
     max-width: 1400px;
-    margin: auto;
-    padding: 15px;
-    text-align: center;
     justify-content: space-evenly;
 }
 
@@ -135,7 +146,6 @@ button:active {
     height: 100%;
     content: "";
     background-color: #e69341;
-
 }
 
 .gameboard-cell::before {
@@ -187,6 +197,8 @@ button:active {
 }
 
 footer {
+    bottom: 0;
+    width: 100%;
     padding: 10px 0;
     text-transform: none;
 }
@@ -194,7 +206,8 @@ footer {
 footer a {
     color: #ffffff;
 }
-@media screen and (max-width: 1025px) {
+
+@media (max-width: 1025px) {
     .header-heading {
         font-size: 1.2em;
         margin-top: 0;
@@ -209,10 +222,10 @@ footer a {
         line-height: 0.7em;
     }
 }
-@media screen and (max-width: 769px) {
+
+@media (max-width: 769px) {
     .game {
         flex-direction: column-reverse;
-        align-items: center;
         min-height: 80vh;
     }
     table {
@@ -233,6 +246,7 @@ footer a {
         margin: 0;
         padding-top: 40vh;
         background-color: rgba(255, 255, 255, 0.822);
+        z-index: 1;
     }
     #continue-button {
         position: absolute;
@@ -241,10 +255,8 @@ footer a {
         width: 55vw;
         margin: 0 22.5vw;
         line-height: 1.5em;
+        z-index: 2;
     }
-}
-
-@media screen and (max-width: 570px) {
     footer,
     .game-statistics {
         font-size: 0.8em;
